Fixed image alignment and flexbox issue

--- a/style.css
+++ b/style.css
@@ -75,13 +75,22 @@ h2, h4 {
 	text-align: center;
 }
 
+.text-content {
+	max-width: 1000px;
+	margin-top: 2em;
+}
+
 .featured-tea {
+	display: inline-flex;
+	justify-content: center;
 	width: 100%;
-	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between;
 	align-items: center;
-	margin-bottom: 10px;
+	margin: 1em 1em;
+}
+
+.monthly-tea {
+	margin: 1em 1em;
 }
 
 .monthly-tea img {
